--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <li><a href="http://62.210.209.113/?fromuid=73855" target="_blank">天空论坛</a></li>
 <li><a href="http://www.sineed18.info/?fromuid=72524" target="_blank">任我睇</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
-<li><a href="http://www.hdp2p.net/" target="_blank">99爱唯工厂</a></li>
+<li><a href="http://www.hdp2p.net/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://www.gaohaolu.ml/" target="_blank">高好撸</a></li>
 <li><a href="http://166.62.61.163/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://avnrw.com/" target="_blank">AV男人网</a></li>
@@ -75,6 +75,7 @@
 <li><a href="http://108.62.192.126/" target="_blank">PLUS28</a></li>
 <li><a href="http://www.3pforum.com/bbs/?fromuid=143829" target="_blank">3P论坛</a></li>
 <li><a href="http://www.new-3lunch.net/?fromuid=441850" target="_blank">New-3Lunch</a></li>
+<li><a href="http://waikeung.info/?fromuid=376863" target="_blank">WK綜合論壇</a></li>
 <li><a href="http://173.192.147.22/?fromuid=1209073" target="_blank">爱碧论坛</a></li>
 <li><a href="http://goxav.cf/?fromuid=1382595" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://www.playno1.com/?fromuid=284114" target="_blank">PLAYNO.1</a></li>
@@ -154,7 +155,8 @@
 		<div class="linkl">
 		<ul>
                             <li><a href="https://www.doufuli.com/" target="_blank">豆福导航</a></li>
-                            <li><a href="http://www.zhaoavdh.net/" target="_blank">找AV导航</a></li>
+                            <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
+                            <li><a href="http://www.haoavdh.com/" target="_blank">找AV导航</a></li>
                             <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
                             <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
@@ -162,7 +164,6 @@
                             <li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
                             <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
                             <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
-                            <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
                             <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
                             <li><a href="http://www.52avdh.com/" target="_blank">52AV导航</a></li>
                             <li><a href="http://www.caoliufabu.com/" target="_blank">草榴发布页</a></li>
@@ -177,13 +178,11 @@
                             <li><a href="http://www.sechungege.com/" target="_blank">色春阁导航</a></li>
                             <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
                             <li><a href="http://www.jijidh.com/" target="_blank">吉吉导航</a></li>
-                            <li><a href="http://www.qiqidh.com/" target="_blank">琪琪导航</a></li>
                             <li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
-							<li><a href="http://www.yaoavdh.com/" target="_blank">要AV导航</a></li>
 							<li><a href="http://www.fulisao.net/" target="_blank">福利嫂宅男导航</a></li>
 							<li><a href="http://www.yikudh.cc/" target="_blank">一库福利导航</a></li>
+                            <li><a href="http://www.jiujiudizhi.com/" target="_blank">久久福利导航</a></li>
                             <li><a href="http://69dh.top/" target="_blank">69宅男福利导航</a></li>
-                            <li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
 							<li><a href="http://www.gvgvdh.com/" target="_blank">GVGV导航</a></li>
 							<li><a href="http://www.caoluotuo.com/" target="_blank">草骆驼福利导航</a></li>
                             <li><a href="http://avcccc.com/" target="_blank">AVcccc导航</a></li>
@@ -221,7 +220,7 @@
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
 <li><a href="http://www.912hh.com/" target="_blank">912在线AV</a></li>
-<li><a href="http://www.dashuav.com/" target="_blank">大叔AV站</a></li>
+<li><a href="http://dashuavs.com/" target="_blank">大叔AV站</a></li>
 <li><a href="http://www.av0769.com/" target="_blank">东莞av</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
