--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
 <li><a href="http://www.lungtan.org/portal.php" target="_blank">龍壇書網</a></li>
 <li><a href="http://www.spring4u.info/index.php" target="_blank">春满四合院</a></li>
 <li><a href="http://www.cool18.com/bbs4/" target="_blank">禁忌书屋</a></li>
-<li><a href="http://bbs.6park.com/classbk" target="_blank">留园经典书库</a></li>
 <li><a href="http://www.dushang99.info/" target="_blank">杜尚论坛</a></li>
 <li><a href="http://mtl6.xyz/" target="_blank">摩天轮社区</a></li>
 <li><a href="http://6ppp6.club/" target="_blank">涩啪啪</a></li>
@@ -102,6 +101,7 @@
 <li><a href="http://www.piring.com/bbs/tcn/?fromuid=2061069" target="_blank">痴汉俱乐部</a></li>
 <li><a href="http://108.171.242.244/" target="_blank">MyHd1080</a></li>
 <li><a href="http://w1.vz05.biz/pw/" target="_blank">1024核工厂</a></li>
+<li><a href="http://www.lsg258.com/?fromuid=1577" target="_blank">老司机论坛</a></li>
 <li><a href="http://redditlist.com/nsfw" target="_blank">redditlist</a></li>
 <li><a href="http://45.32.51.95/?fromuid=2571826" target="_blank">捷克论坛</a></li>
 <li><a href="http://www.stiantang.info/?fromuid=24994" target="_blank">涩天堂</a></li>
@@ -139,7 +139,7 @@
 <li><a href="http://aa2n.com/" target="_blank">三涩论坛</a></li>
 <li><a href="http://thzbt.biz/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://girlclub8.com/?fromuid=1096417" target="_blank">杏吧有你</a></li>
-<li><a href="http://cl.rfbfp.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
+<li><a href="http://dz.b8d.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://hjkjh.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
 <li><a href="http://tmdkao.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
 <li><a href="http://cl.oaiyr.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
@@ -170,7 +170,7 @@
                             <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
                             <li><a href="http://www.chihandh.com/" target="_blank">痴汉导航</a></li>
-                            <li><a href="http://www.soavdh.com/" target="_blank">搜AV导航</a></li>
+                            <li><a href="http://www.soavdh.net/" target="_blank">搜AV导航</a></li>
                             <li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
                             <li><a href="http://www.lw78.cc/" target="_blank">老王福利导航</a></li>
                             <li><a href="http://www.semmdh.com/" target="_blank">色妹妹导航</a></li>
@@ -244,6 +244,16 @@
 <li><a href="http://www.yunav1.xyz/" target="_blank">AV云</a></li>
 <li><a href="http://www.999zaixian.com/" target="_blank">久久碰</a></li>
 <li><a href="http://www.yiyiporn.com/" target="_blank">依依碰</a></li>
+<li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
+<li><a href="http://www.ipa55.com/" target="_blank">爱拍网</a></li>
+<li><a href="http://www.hiap8.com/" target="_blank">青青草</a></li>
+<li><a href="http://www.pjl03.com/" target="_blank">潘金莲</a></li>
+<li><a href="http://www.wdl03.com/" target="_blank">武大朗</a></li>
+<li><a href="http://www.hlm003.com/" target="_blank">红楼梦</a></li>
+<li><a href="http://www.bgj03.com/" target="_blank">白骨精</a></li>
+<li><a href="http://www.av202.com/" target="_blank">在线AV视频</a></li>
+<li><a href="http://www.005xb.com/" target="_blank">自拍在线</a></li>
+<li><a href="http://www.91x91.com/" target="_blank">91自拍网</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
 <li><a href="http://www.avtb8.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://video169.com/" target="_blank">Sex169影城</a></li>
@@ -370,6 +380,7 @@
 <li><a href="http://u15.info/" target="_blank">U-15天堂</a></li>
 <li><a href="http://www.meili40.com/?fromuid=182314" target="_blank">美丽40</a></li>
 <li><a href="http://www.wumeisz.net/?fromuid=9546" target="_blank">妩媚山庄</a></li>
+<li><a href="http://nztdsm5.com/?fromuid=411498" target="_blank">女主天地</a></li>
 <li><a href="http://www.bigbreastarchive.com/" target="_blank">大奶图片</a></li>
 <li><a href="http://www.foxhq.com/" target="_blank">爆乳丰臀画廊</a></li>
 <li><a href="http://www.farangdingdong.com/" target="_blank">FarangDingDong</a></li>
@@ -387,7 +398,6 @@
 <li><a href="http://www.trannytube.name/" target="_blank">Tranny Tube</a></li>
 <li><a href="http://www.slavestube.com/" target="_blank">Slaves Tube</a></li>
 <li><a href="http://japanbdsm.com/" target="_blank">Japan BDSM</a></li>
-<li><a href="https://51luoben.xyz/?fromuid=105280" target="_blank">我要裸奔</a></li>
 				    </ul>
 		</div>
 		</div>
