--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <li><a href="http://hd2046.info/" target="_blank">AV 天空</a></li>
 <li><a href="https://www.ilbeya5.com/" target="_blank">ilbeya5</a></li>
 <li><a href="http://www.thai-pix.com/" target="_blank">Thai-Pix</a></li>
-<li><a href="http://www.amay.tv/forum.php" target="_blank">阿玫圖庫</a></li>
+<li><a href="http://www.xmq03.com/" target="_blank">西门庆</a></li>
 <li><a href="http://www.91szs.com/" target="_blank">91涩中涩</a></li>
 <li><a href="http://aa2n.com/" target="_blank">三涩论坛</a></li>
 <li><a href="http://thzbt.biz/?fromuid=70941" target="_blank">桃花族</a></li>
