--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
 <li><a href="http://174.127.195.187/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
+<li><a href="http://www.gaohaolu.ml/" target="_blank">高好撸</a></li>
+<li><a href="http://www.jc2.top/" target="_blank">红秀资源网</a></li>
 <li><a href="http://62.210.209.113/?fromuid=73855" target="_blank">天空论坛</a></li>
 <li><a href="http://www.sineed18.info/?fromuid=72524" target="_blank">任我睇</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://www.hdp2p.net/?fromuid=320" target="_blank">99爱唯工厂</a></li>
-<li><a href="http://www.gaohaolu.ml/" target="_blank">高好撸</a></li>
 <li><a href="http://166.62.61.163/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://avnrw.com/" target="_blank">AV男人网</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
@@ -142,7 +143,7 @@
 <li><a href="http://dz.b8d.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
 <li><a href="http://hjkjh.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
 <li><a href="http://tmdkao.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
-<li><a href="http://cl.oaiyr.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
+<li><a href="http://cl.ek9.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
 <li><a href="http://c6.jekr.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
 <li><a href="http://cl.opeot.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
 				    </ul>
@@ -223,12 +224,13 @@
 <li><a href="http://avlu99.com/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
+<li><a href="http://www.91sheav.top/" target="_blank">就要射AV</a></li>
 <li><a href="http://www.912hh.com/" target="_blank">912在线AV</a></li>
 <li><a href="http://dashuavs.com/" target="_blank">大叔AV站</a></li>
 <li><a href="http://www.av0769.com/" target="_blank">东莞av</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
-<li><a href="http://www.henlupao.com/" target="_blank">狠撸炮</a></li>
+<li><a href="http://www.91lupao.com/" target="_blank">狠撸炮</a></li>
 <li><a href="http://qisevd.com/" target="_blank">奇色视频</a></li>
 <li><a href="http://www.bensexo.com/" target="_blank">本色视频</a></li>
 <li><a href="http://www.yese1024.com/" target="_blank">夜色视频</a></li>
@@ -262,7 +264,7 @@
 <li><a href="http://www.zz1200.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.aikan888.com/" target="_blank">爱看视频</a></li>
 <li><a href="http://aishangvideo.com/" target="_blank">爱上视频</a></li>
-<li><a href="http://papapa33.com/" target="_blank">水莓100</a></li>
+<li><a href="http://www.vod30.com/" target="_blank">VOD视频</a></li>
 <li><a href="http://www.36gao.com/" target="_blank">haodiaose</a></li>
 <li><a href="http://vod23.com/" target="_blank">VOD视屏</a></li>
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
