--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 <li><a href="http://www.chunsesp.com/" target="_blank">春色视频</a></li>
 <li><a href="http://www.uuszy.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://www.56ava.com/" target="_blank">桃花岛</a></li>
-<li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
+<li><a href="http://91888.ga/" target="_blank">A福利视频</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.avlezi.com/" target="_blank">AV乐子</a></li>
 <li><a href="http://souav111.com/" target="_blank">搜AV视频</a></li>
