--- a/index.html
+++ b/index.html
@@ -155,8 +155,9 @@
 		<strong><a name="/4/">导航网站</a></strong><strong style="padding:0 185px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">发送任意邮件到<font color="#7CFC00">6dizhi@gmail.com</font>，自动回复蓝色小导航最新地址</strong>
 		<div class="linkl">
 		<ul>
-                            <li><a href="https://www.doufuli.com/" target="_blank">豆福导航</a></li>
+                            <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
                             <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
+                            <li><a href="https://www.doufuli.com/" target="_blank">豆福导航</a></li>
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
                             <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
                             <li><a href="http://www.hhzjzz.com/" target="_blank">蜜汁福利导航</a></li>
@@ -164,12 +165,11 @@
                             <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
                             <li><a href="http://www.haoavdh.com/" target="_blank">找AV导航</a></li>
                             <li><a href="http://ailovedh.com/" target="_blank">大爱导航</a></li>
-                            <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
                             <li><a href="http://www.seevdo18.ga/" target="_blank">大人导航</a></li>
                             <li><a href="http://www.52avdh.com/" target="_blank">52AV导航</a></li>
                             <li><a href="http://www.caoliufabu.com/" target="_blank">草榴发布页</a></li>
-                            <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
+                            <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
                             <li><a href="http://www.chihandh.com/" target="_blank">痴汉导航</a></li>
                             <li><a href="http://www.soavdh.net/" target="_blank">搜AV导航</a></li>
                             <li><a href="http://nimadaohang.com/" target="_blank">尼玛导航</a></li>
@@ -207,17 +207,18 @@
 <li><a href="http://87act.com/" target="_blank">87视频</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
+<li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
+<li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
+<li><a href="http://lvchatube.com/" target="_blank">绿茶视频</a></li>
+<li><a href="http://hongxingme.com/" target="_blank">红杏视频</a></li>
+<li><a href="http://v2momo.com/" target="_blank">V2视频</a></li>
+<li><a href="http://wulid8.com/" target="_blank">D8视频</a></li>
+<li><a href="http://fire2sp.com/" target="_blank">火兔视频</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.yyaiav.com/" target="_blank">夜夜爱AV</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
-<li><a href="http://v2momo.com/" target="_blank">V2视频</a></li>
-<li><a href="http://wulid8.com/" target="_blank">D8视频</a></li>
-<li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
-<li><a href="http://qingcaopa.com/" target="_blank">轻草视频</a></li>
-<li><a href="http://lvchatube.com/" target="_blank">绿茶视频</a></li>
-<li><a href="http://hongxingme.com/" target="_blank">红杏视频</a></li>
 <li><a href="http://www.56avs.com/" target="_blank">沃流视频</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
 <li><a href="http://www.lyfav.com/" target="_blank">撸一发av</a></li>
@@ -228,24 +229,23 @@
 <li><a href="http://www.912hh.com/" target="_blank">912在线AV</a></li>
 <li><a href="http://dashuavs.com/" target="_blank">大叔AV站</a></li>
 <li><a href="http://www.av0769.com/" target="_blank">东莞av</a></li>
-<li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://www.91lupao.com/" target="_blank">狠撸炮</a></li>
 <li><a href="http://qisevd.com/" target="_blank">奇色视频</a></li>
 <li><a href="http://www.bensexo.com/" target="_blank">本色视频</a></li>
 <li><a href="http://www.yese1024.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunsesp.com/" target="_blank">春色视频</a></li>
-<li><a href="http://www.uuszy.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://www.56ava.com/" target="_blank">桃花岛</a></li>
 <li><a href="http://91888.ga/" target="_blank">A福利视频</a></li>
-<li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.avlezi.com/" target="_blank">AV乐子</a></li>
-<li><a href="http://souav111.com/" target="_blank">搜AV视频</a></li>
-<li><a href="http://www.51luav.com/" target="_blank">51撸AV在线</a></li>
 <li><a href="http://www.avsuo.com/" target="_blank">AVSUO在线</a></li>
-<li><a href="http://www.yunav1.xyz/" target="_blank">AV云</a></li>
 <li><a href="http://www.999zaixian.com/" target="_blank">久久碰</a></li>
 <li><a href="http://www.yiyiporn.com/" target="_blank">依依碰</a></li>
+<li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
+<li><a href="http://www.uuszy.com/" target="_blank">悠色资源网</a></li>
+<li><a href="http://souav111.com/" target="_blank">搜AV视频</a></li>
+<li><a href="http://www.51luav.com/" target="_blank">51撸AV在线</a></li>
+<li><a href="http://www.yunav1.xyz/" target="_blank">AV云</a></li>
 <li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
 <li><a href="http://hhs03.com/" target="_blank">花和尚</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
