--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@
                             <li><a href="http://lvjiabai1.info/" target="_blank">绿加白导航</a></li>
                             <li><a href="http://www.sechungege.com/" target="_blank">色春阁导航</a></li>
                             <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
-                            <li><a href="http://www.jijidh.com/" target="_blank">吉吉导航</a></li>
                             <li><a href="http://www.dccwl.com/" target="_blank">色慰导航</a></li>
 							<li><a href="http://www.fulisao.net/" target="_blank">福利嫂宅男导航</a></li>
 							<li><a href="http://www.yikudh.cc/" target="_blank">一库福利导航</a></li>
@@ -192,8 +191,14 @@
                             <li><a href="http://dh.hfuli.com/" target="_blank">H福利导航</a></li>
                             <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
                             <li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
+                            <li><a href="http://www.jijidh.com/" target="_blank">吉吉导航</a></li>
                             <li><a href="http://www.sndh8.com/" target="_blank">骚男福利导航</a></li>
-                            <li><a href="http://www.cjgdh.net/" target="_blank">藏姬阁导航</a></li>                          
+                            <li><a href="http://www.cjgdh.net/" target="_blank">藏姬阁导航</a></li>
+                            <li><a href="http://www.diyise.co/" target="_blank">第一色导航</a></li>
+                            <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
+                            <li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
+                            <li><a href="http://731xx.info/" target="_blank">聚百艳导航</a></li>
+                            <li><a href="http://mifuli.com/" target="_blank">米福利</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -234,7 +239,7 @@
 <li><a href="http://qisevd.com/" target="_blank">奇色视频</a></li>
 <li><a href="http://www.bensexo.com/" target="_blank">本色视频</a></li>
 <li><a href="http://www.yese1024.com/" target="_blank">夜色视频</a></li>
-<li><a href="http://www.chunsesp.com/" target="_blank">春色视频</a></li>
+<li><a href="http://www.chunsegan.com/" target="_blank">春色视频</a></li>
 <li><a href="http://www.56ava.com/" target="_blank">桃花岛</a></li>
 <li><a href="http://91888.ga/" target="_blank">A福利视频</a></li>
 <li><a href="http://www.avlezi.com/" target="_blank">AV乐子</a></li>
@@ -721,7 +726,7 @@
 <li><a href="http://www.btmon.com/" target="_blank">BTMon</a></li>
 <li><a href="http://www.tokyotosho.info/" target="_blank">Tokyo Toshokan</a></li>
 <li><a href="http://torrent.sex169.biz/" target="_blank">SEX169 種子站</a></li>
-<li><a href="http://22ttbt.com/" target="_blank">图图资源</a></li>
+<li><a href="http://www.btzy56.com/" target="_blank">图图资源</a></li>
 <li><a href="http://bt.gg/" target="_blank">短磁链</a></li>
 <li><a href="https://btdb.in/" target="_blank">BTDB</a></li>
 <li><a href="http://www.cilibaba.com/" target="_blank">CiLiBaBa</a></li>
