--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
 <li><a href="http://www.91sheav.top/" target="_blank">就要射AV</a></li>
 <li><a href="http://www.912hh.com/" target="_blank">912在线AV</a></li>
-<li><a href="http://dashuavs.com/" target="_blank">大叔AV站</a></li>
+<li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.av0769.com/" target="_blank">东莞av</a></li>
 <li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://www.91lupao.com/" target="_blank">狠撸炮</a></li>
@@ -446,6 +446,7 @@
 <li><a href="http://www.weipaifuliw.com/" target="_blank">微拍福利网</a></li>
 <li><a href="http://www.83252525.com/" target="_blank">微拍福利视频</a></li>
 <li><a href="http://www.fulishipin.info/" target="_blank">微拍福利哇卡呀</a></li>
+<li><a href="http://www.2423.cc/" target="_blank">VR在线直播</a></li>
 <li><a href="http://www.98zhubo.com/?fromuid=53" target="_blank">98主播网</a></li>
 <li><a href="http://xftec.com/forum.php?x=2122570" target="_blank">夫妻吧</a></li>
 <li><a href="http://www.137992.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
