--- a/index.html
+++ b/index.html
@@ -192,11 +192,13 @@
                             <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
                             <li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
                             <li><a href="http://www.jijidh.com/" target="_blank">吉吉导航</a></li>
+                            <li><a href="http://www.qiqidh.com/" target="_blank">琪琪导航</a></li>
+                            <li><a href="http://www.damodh.com/" target="_blank">51VOB导航</a></li>
+                            <li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
                             <li><a href="http://www.sndh8.com/" target="_blank">骚男福利导航</a></li>
                             <li><a href="http://www.cjgdh.net/" target="_blank">藏姬阁导航</a></li>
                             <li><a href="http://www.diyise.co/" target="_blank">第一色导航</a></li>
                             <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
-                            <li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
                             <li><a href="http://731xx.info/" target="_blank">聚百艳导航</a></li>
                             <li><a href="http://mifuli.com/" target="_blank">米福利</a></li>
 				    </ul>
