--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
                             <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
                             <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
+                            <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
                             <li><a href="http://avcccc.com/" target="_blank">AVcccc导航</a></li>
                             <li><a href="http://www.jiujiudizhi.com/" target="_blank">久久福利导航</a></li>
                             <li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
@@ -198,9 +199,10 @@
                             <li><a href="http://www.sndh8.com/" target="_blank">骚男福利导航</a></li>
                             <li><a href="http://www.cjgdh.net/" target="_blank">藏姬阁导航</a></li>
                             <li><a href="http://www.diyise.co/" target="_blank">第一色导航</a></li>
-                            <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
                             <li><a href="http://731xx.info/" target="_blank">聚百艳导航</a></li>
-                            <li><a href="http://mifuli.com/" target="_blank">米福利</a></li>
+                            <li><a href="http://www.znfl777.top/" target="_blank">黑木耳导航</a></li>
+                            <li><a href="http://900010.la/" target="_blank">900010导航</a></li>
+                            <li><a href="http://www.dafjdh.com/" target="_blank">打飞机导航</a></li>
 				    </ul>
 		</div>
 		</div>
