--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
 		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://dear.gq" target="_blank"><span style="color:#2bf7c0;">dear.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://party.gq" target="_blank"><span style="color:#2bf7c0;">party.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
-<li><a href="http://cl.gtcool.pw/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
+<li><a href="http://cl.gtcool.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区</a></li>
 <li><a href="http://papageo.net/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77820.net/bbs/" target="_blank">Xiao77</a></li>
 <li><a href="http://174.127.195.187/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
+<li><a href="http://d.officeblog.jp/" target="_blank">蓝色资源</a></li>
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.gaohaolu.ml/" target="_blank">高好撸</a></li>
 <li><a href="http://www.jc2.top/" target="_blank">红秀资源网</a></li>
@@ -140,12 +141,12 @@
 <li><a href="http://aa2n.com/" target="_blank">三涩论坛</a></li>
 <li><a href="http://thzbt.biz/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://girlclub8.com/?fromuid=1096417" target="_blank">杏吧有你</a></li>
-<li><a href="http://dz.b8d.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区2</a></li>
-<li><a href="http://hjkjh.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区3</a></li>
-<li><a href="http://tmdkao.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
-<li><a href="http://cl.ek9.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
-<li><a href="http://c6.jekr.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
-<li><a href="http://cl.opeot.org/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
+<li><a href="http://dz.b8d.biz/index.php?u=292664&ext=d7b31" target="_blank">草榴社区2</a></li>
+<li><a href="http://hjkjh.org/index.php?u=292664&ext=d7b31" target="_blank">草榴社区3</a></li>
+<li><a href="http://tmdkao.com/index.php?u=292664&ext=d7b31" target="_blank">草榴社区4</a></li>
+<li><a href="http://cl.ek9.biz/index.php?u=292664&ext=d7b31" target="_blank">草榴社区5</a></li>
+<li><a href="http://c6.jekr.biz/index.php?u=292664&ext=d7b31" target="_blank">草榴社区6</a></li>
+<li><a href="http://cl.opeot.org/index.php?u=292664&ext=d7b31" target="_blank">草榴社区7</a></li>
 				    </ul>
 		</div>
 		</div>
