--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 <li><a href="http://bbs.gogo.la/" target="_blank">高高啦討論區</a></li>
 <li><a href="http://bbs.sex169.biz/?fromuid=141932" target="_blank">SEX169 論壇</a></li>
 <li><a href="http://www.p2plol.com/" target="_blank">咪咪爱</a></li>
+<li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.naluone-at.com/forum/index.php" target="_blank">娜鲁湾论坛</a></li>
 <li><a href="http://wuso.me/?fromuid=10995" target="_blank">屋受論壇</a></li>
 <li><a href="http://dio88.net/?fromuid=2077160" target="_blank">魔王の家</a></li>
@@ -199,11 +200,11 @@
                             <li><a href="http://www.jijidh.com/" target="_blank">吉吉导航</a></li>
                             <li><a href="http://www.qiqidh.com/" target="_blank">琪琪导航</a></li>
                             <li><a href="http://www.sndh8.com/" target="_blank">骚男福利导航</a></li>
-                            <li><a href="http://www.cjgdh.net/" target="_blank">藏姬阁导航</a></li>
                             <li><a href="http://731xx.info/" target="_blank">聚百艳导航</a></li>
                             <li><a href="http://www.znfl777.top/" target="_blank">黑木耳导航</a></li>
                             <li><a href="http://900010.la/" target="_blank">900010导航</a></li>
                             <li><a href="http://www.dafjdh.com/" target="_blank">打飞机导航</a></li>
+                            <li><a href="http://dh.69.mu/" target="_blank">蓝导航</a></li>
 				    </ul>
 		</div>
 		</div>
