--- a/index.html
+++ b/index.html
@@ -51,19 +51,20 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://cl.gtcool.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区</a></li>
+<li><a href="http://d.officeblog.jp/" target="_blank">蓝色资源</a></li>
 <li><a href="http://papageo.net/?fromuid=8" target="_blank">啪啪社区</a></li>
 <li><a href="http://th47.net/?fromuid=5495" target="_blank">淘花社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77820.net/bbs/" target="_blank">Xiao77</a></li>
 <li><a href="http://174.127.195.187/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
-<li><a href="http://d.officeblog.jp/" target="_blank">蓝色资源</a></li>
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.gaohaolu.ml/" target="_blank">高好撸</a></li>
 <li><a href="http://www.jc2.top/" target="_blank">红秀资源网</a></li>
 <li><a href="http://62.210.209.113/?fromuid=73855" target="_blank">天空论坛</a></li>
 <li><a href="http://www.sineed18.info/?fromuid=72524" target="_blank">任我睇</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
+<li><a href="http://bim10.com/?fromuid=80" target="_blank">B友资源站</a></li>
 <li><a href="http://www.hdp2p.net/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://166.62.61.163/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://avnrw.com/" target="_blank">AV男人网</a></li>
