--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <li><a href="http://174.127.195.187/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://104.194.212.12/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
-<li><a href="http://www.gaohaolu.ml/" target="_blank">高好撸</a></li>
+<li><a href="http://www.gaohaolu.ga/" target="_blank">高好撸</a></li>
 <li><a href="http://www.jc2.top/" target="_blank">红秀资源网</a></li>
 <li><a href="http://62.210.209.113/?fromuid=73855" target="_blank">天空论坛</a></li>
 <li><a href="http://www.sineed18.info/?fromuid=72524" target="_blank">任我睇</a></li>
@@ -67,7 +67,6 @@
 <li><a href="http://bim10.com/?fromuid=80" target="_blank">B友资源站</a></li>
 <li><a href="http://www.hdp2p.net/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://166.62.61.163/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
-<li><a href="http://avnrw.com/" target="_blank">AV男人网</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
 <li><a href="http://97kaixin.com/" target="_blank">97开心</a></li>
 <li><a href="http://www.laikanmei.top/" target="_blank">来看妹论坛</a></li>
@@ -134,7 +133,7 @@
 <li><a href="http://ttlbbs.net/?fromuid=3952405" target="_blank">桃太狼</a></li>
 <li><a href="http://ooxx9.net/?fromuid=549063" target="_blank">OOXX论坛</a></li>
 <li><a href="http://www.xav66.com/" target="_blank">XIAAV</a></li>
-<li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453P</a></li>
+<li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
 <li><a href="http://www.yxj163.com/?fromuid=416640" target="_blank">亿性家</a></li>
 <li><a href="http://hd2046.info/" target="_blank">AV 天空</a></li>
 <li><a href="https://www.ilbeya5.com/" target="_blank">ilbeya5</a></li>
@@ -143,7 +142,7 @@
 <li><a href="http://aa2n.com/" target="_blank">三涩论坛</a></li>
 <li><a href="http://thzbt.biz/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://girlclub8.com/?fromuid=1096417" target="_blank">杏吧有你</a></li>
-<li><a href="http://dz.b8d.biz/index.php?u=292664&ext=d7b31" target="_blank">草榴社区2</a></li>
+<li><a href="http://cl.longbiao.wang/index.php?u=292664&ext=d7b31" target="_blank">草榴社区2</a></li>
 <li><a href="http://hjkjh.org/index.php?u=292664&ext=d7b31" target="_blank">草榴社区3</a></li>
 <li><a href="http://tmdkao.com/index.php?u=292664&ext=d7b31" target="_blank">草榴社区4</a></li>
 <li><a href="http://cl.ek9.biz/index.php?u=292664&ext=d7b31" target="_blank">草榴社区5</a></li>
@@ -161,7 +160,7 @@
                             <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
                             <li><a href="http://www.500dh.com/" target="_blank">500导航</a></li>
                             <li><a href="http://www.diyise.co/" target="_blank">第一色导航</a></li>
-                            <li><a href="https://www.doufuli.com/" target="_blank">豆福导航</a></li>
+                            <li><a href="http://1024daohang.com/" target="_blank">豆福色导航</a></li>
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
                             <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
                             <li><a href="http://www.hhzjzz.com/" target="_blank">蜜汁福利导航</a></li>
@@ -215,8 +214,7 @@
 		<strong><a name="/5/">国内视频</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
-<li><a href="http://87act.com/" target="_blank">87视频</a></li>
+<li><a href="http://87all.com/" target="_blank">87自拍视频</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
@@ -253,6 +251,7 @@
 <li><a href="http://www.avsuo.com/" target="_blank">AVSUO在线</a></li>
 <li><a href="http://www.999zaixian.com/" target="_blank">久久碰</a></li>
 <li><a href="http://www.yiyiporn.com/" target="_blank">依依碰</a></li>
+<li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.uuszy.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://souav111.com/" target="_blank">搜AV视频</a></li>
@@ -410,6 +409,7 @@
 		<strong><a name="/8/">动漫ACG</a></strong>
 		<div class="linkl">
 		<ul>
+<li><a href="https://bbs.holyo.org/?fromuid=3565" target="_blank">圣灵神域</a></li>
 <li><a href="http://www.blrgfz.com/" target="_blank">邪恶少女漫画</a></li>
 <li><a href="http://www.decask.com/" target="_blank">邪恶漫画吧</a></li>
 <li><a href="http://hentai-d.com/" target="_blank">Hentai-d</a></li>
