--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
 		<strong><a name="/5/">国内视频</a></strong>
 		<div class="linkl">
 		<ul>
+<li><a href="http://liusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://87all.com/" target="_blank">87自拍视频</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
@@ -261,7 +262,7 @@
 <li><a href="http://hhs03.com/" target="_blank">花和尚</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
 <li><a href="http://www.avtb8.com/" target="_blank">AV淘宝</a></li>
-<li><a href="http://video169.com/" target="_blank">Sex169影城</a></li>
+<li><a href="http://a7s7.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://uu9090.net/" target="_blank">18AV</a></li>
 <li><a href="http://www.5xsq123.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.yeshemao520.top/" target="_blank">夜涩猫</a></li>
@@ -281,7 +282,6 @@
 <li><a href="http://8833hao.com/" target="_blank">995hao</a></li>
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
-<li><a href="http://www.299gao.com/" target="_blank">妞干网</a></li>
 <li><a href="http://www.avtai3.com/" target="_blank">AvTai</a></li>
 <li><a href="http://ixxzy.com/" target="_blank">ixxzy</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
