--- a/index.html
+++ b/index.html
@@ -62,14 +62,12 @@
 <li><a href="http://www.gaohaolu.ga/" target="_blank">高好撸</a></li>
 <li><a href="http://www.jc2.top/" target="_blank">红秀资源网</a></li>
 <li><a href="http://62.210.209.113/?fromuid=73855" target="_blank">天空论坛</a></li>
-<li><a href="http://www.sineed18.info/?fromuid=72524" target="_blank">任我睇</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
-<li><a href="http://bim10.com/?fromuid=80" target="_blank">B友资源站</a></li>
+<li><a href="https://www.bim10.club/?fromuid=80" target="_blank">B友资源站</a></li>
 <li><a href="http://www.hdp2p.net/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://166.62.61.163/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
 <li><a href="http://97kaixin.com/" target="_blank">97开心</a></li>
-<li><a href="http://www.laikanmei.top/" target="_blank">来看妹论坛</a></li>
 <li><a href="http://fuli3758.com/" target="_blank">福利社小说</a></li>
 <li><a href="http://6ni.info/forum.php" target="_blank">365论坛</a></li>
 <li><a href="http://www.18p2p.com/forum/index.php" target="_blank">18p2p</a></li>
@@ -214,7 +212,7 @@
 		<strong><a name="/5/">国内视频</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://liusiji.com/" target="_blank">老司机视频</a></li>
+<li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://87all.com/" target="_blank">87自拍视频</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
