--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.gaohaolu.ga/" target="_blank">高好撸</a></li>
 <li><a href="http://www.jc2.top/" target="_blank">红秀资源网</a></li>
-<li><a href="http://62.210.209.113/?fromuid=73855" target="_blank">天空论坛</a></li>
+<li><a href="http://avhaobt.com/?fromuid=73855" target="_blank">天空论坛</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
-<li><a href="https://www.bim10.club/?fromuid=80" target="_blank">B友资源站</a></li>
+<li><a href="http://www.bim10.club/?fromuid=80" target="_blank">B友资源站</a></li>
 <li><a href="http://www.hdp2p.net/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://166.62.61.163/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
@@ -145,7 +145,7 @@
 <li><a href="http://tmdkao.com/index.php?u=292664&ext=d7b31" target="_blank">草榴社区4</a></li>
 <li><a href="http://cl.ek9.biz/index.php?u=292664&ext=d7b31" target="_blank">草榴社区5</a></li>
 <li><a href="http://c6.jekr.biz/index.php?u=292664&ext=d7b31" target="_blank">草榴社区6</a></li>
-<li><a href="http://cl.opeot.org/index.php?u=292664&ext=d7b31" target="_blank">草榴社区7</a></li>
+<li><a href="http://c6.j8e.biz/index.php?u=292664&ext=d7b31" target="_blank">草榴社区7</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -223,6 +223,7 @@
 <li><a href="http://v2momo.com/" target="_blank">V2视频</a></li>
 <li><a href="http://wulid8.com/" target="_blank">D8视频</a></li>
 <li><a href="http://fire2sp.com/" target="_blank">火兔视频</a></li>
+<li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
@@ -251,7 +252,6 @@
 <li><a href="http://www.999zaixian.com/" target="_blank">久久碰</a></li>
 <li><a href="http://www.yiyiporn.com/" target="_blank">依依碰</a></li>
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
-<li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.uuszy.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://souav111.com/" target="_blank">搜AV视频</a></li>
 <li><a href="http://www.51luav.com/" target="_blank">51撸AV在线</a></li>
