--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
 <li><a href="http://se8girl.com/?fromuid=1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://www.gaohaolu.ga/" target="_blank">高好撸</a></li>
 <li><a href="http://www.jc2.top/" target="_blank">红秀资源网</a></li>
-<li><a href="http://avhaobt.com/?fromuid=73855" target="_blank">天空论坛</a></li>
-<li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://www.bim10.club/?fromuid=80" target="_blank">B友资源站</a></li>
+<li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
+<li><a href="http://www.yesir.co/forum.php" target="_blank">夜色精選論壇</a></li>
+<li><a href="http://avhaobt.com/?fromuid=73855" target="_blank">天空论坛</a></li>
 <li><a href="http://www.hdp2p.net/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://166.62.61.163/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
@@ -201,7 +202,7 @@
                             <li><a href="http://www.znfl777.top/" target="_blank">黑木耳导航</a></li>
                             <li><a href="http://900010.la/" target="_blank">900010导航</a></li>
                             <li><a href="http://www.dafjdh.com/" target="_blank">打飞机导航</a></li>
-                            <li><a href="http://www.sndh8.com/" target="_blank">骚男福利导航</a></li>
+                            <li><a href="http://yeyeliu.top/" target="_blank">夜夜流</a></li>
                             <li><a href="http://www.cangjigedh.com/" target="_blank">藏姬阁导航</a></li>                            
 				    </ul>
 		</div>
@@ -221,7 +222,7 @@
 <li><a href="http://lvchatube.com/" target="_blank">绿茶视频</a></li>
 <li><a href="http://hongxingme.com/" target="_blank">红杏视频</a></li>
 <li><a href="http://v2momo.com/" target="_blank">V2视频</a></li>
-<li><a href="http://wulid8.com/" target="_blank">D8视频</a></li>
+<li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
 <li><a href="http://fire2sp.com/" target="_blank">火兔视频</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
@@ -521,6 +522,7 @@
 		<strong><a name="/11/">島國情报</a></strong>
 		<div class="linkl">
 		<ul>
+<li><a href="http://www.51shl.xyz/" target="_blank">色狐狸</a></li>
 <li><a href="http://www.javl10.com/cn/" target="_blank">JavLibrary</a></li>
 <li><a href="https://www.javbus.info/" target="_blank">JavBus</a></li>
 <li><a href="http://www.uggdiy.com/" target="_blank">求番号吧</a></li>
