--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
 <li><a href="http://www.thai-pix.com/" target="_blank">Thai-Pix</a></li>
 <li><a href="http://www.91szs.com/" target="_blank">91涩中涩</a></li>
 <li><a href="http://aa2n.com/" target="_blank">三涩论坛</a></li>
-<li><a href="http://thzbt.biz/?fromuid=70941" target="_blank">桃花族</a></li>
+<li><a href="http://taohuabt.com/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://girlclub8.com/?fromuid=1096417" target="_blank">杏吧有你</a></li>
 <li><a href="http://cl.longbiao.wang/index.php?u=292664&ext=d7b31" target="_blank">草榴社区2</a></li>
 <li><a href="http://hjkjh.org/index.php?u=292664&ext=d7b31" target="_blank">草榴社区3</a></li>
 <li><a href="http://tmdkao.com/index.php?u=292664&ext=d7b31" target="_blank">草榴社区4</a></li>
 <li><a href="http://cl.ek9.biz/index.php?u=292664&ext=d7b31" target="_blank">草榴社区5</a></li>
-<li><a href="http://c6.jekr.biz/index.php?u=292664&ext=d7b31" target="_blank">草榴社区6</a></li>
+<li><a href="http://cl.h5e.biz/index.php?u=292664&ext=d7b31" target="_blank">草榴社区6</a></li>
 <li><a href="http://c6.j8e.biz/index.php?u=292664&ext=d7b31" target="_blank">草榴社区7</a></li>
 				    </ul>
 		</div>
@@ -223,7 +223,6 @@
 <li><a href="http://hongxingme.com/" target="_blank">红杏视频</a></li>
 <li><a href="http://v2momo.com/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
-<li><a href="http://fire2sp.com/" target="_blank">火兔视频</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
@@ -233,6 +232,7 @@
 <li><a href="http://www.56avs.com/" target="_blank">沃流视频</a></li>
 <li><a href="http://www.fx1200.com/" target="_blank">咪咪影院</a></li>
 <li><a href="http://meisezx.com/" target="_blank">魅色在线</a></li>
+<li><a href="http://www.fhmmav.com/" target="_blank">粉红妹妹</a></li>
 <li><a href="http://avlu99.com/" target="_blank">撸啊撸</a></li>
 <li><a href="http://www.ikanav.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://www.db66.cc/" target="_blank">AV在线视频</a></li>
@@ -246,6 +246,7 @@
 <li><a href="http://www.bensexo.com/" target="_blank">本色视频</a></li>
 <li><a href="http://www.yese1024.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunsegan.com/" target="_blank">春色视频</a></li>
+<li><a href="http://fire2sp.com/" target="_blank">火兔视频</a></li>
 <li><a href="http://www.56ava.com/" target="_blank">桃花岛</a></li>
 <li><a href="http://91888.ga/" target="_blank">A福利视频</a></li>
 <li><a href="http://www.avlezi.com/" target="_blank">AV乐子</a></li>
@@ -282,7 +283,6 @@
 <li><a href="http://www.vid999.com/" target="_blank">vid999</a></li>
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
 <li><a href="http://www.avtai3.com/" target="_blank">AvTai</a></li>
-<li><a href="http://ixxzy.com/" target="_blank">ixxzy</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.av8d.co/" target="_blank">琪琪涩原</a></li>
 <li><a href="http://www.777vid.com/" target="_blank">PLAY 视频</a></li>
@@ -425,7 +425,9 @@
 <li><a href="http://hentaiplay.net/" target="_blank">hentaiplay</a></li>
 <li><a href="http://erolord.com/" target="_blank">Hentai online</a></li>
 <li><a href="http://hentai.animestigma.com/" target="_blank">Hentai Stigma</a></li>
-<li><a href="http://www.allhentaigals.com/" target="_blank">All Hentai Gals</a></li>
+<li><a href="http://hentaistream.com/" target="_blank">Hentai Stream</a></li>
+<li><a href="http://www.hentai.xxx/" target="_blank">Hentai xxx</a></li>
+<li><a href="https://www.fakku.net/" target="_blank">FAKKU</a></li>
 <li><a href="http://206.190.134.44/" target="_blank">Hmovie-moe</a></li>
 <li><a href="http://www.toonaddict.com/" target="_blank">Toon Addict</a></li>
 <li><a href="http://www.mangago.me/" target="_blank">Mangago</a></li>
